# rpg_classic_plataform

./: CMakeLists.txt
src/: classe.cpp  executavel  funcao.cpp  main.cpp
src/h/: classe.h  funcao.h
src/include/allegro/platform/: alunixac.h
src/lib/: liballeg.so.4.4.3  liblogg.so.4.4
